# multi-llm-Chatbot-backend

./: Dockerfile  README.md  agent.py  docker-compose.yml  llm_client.py  main.py  pyproject.toml  requirements.txt
UI/mulLLMChatapp/: README.md  angular.json  package-lock.json  package.json
UI/mulLLMChatapp/src/: index.html
UI/mulLLMChatapp/src/app/: app.routes.ts  app.spec.ts  auth.guard.ts  auth.service.ts
UI/mulLLMChatapp/src/app/home/: home.component.css  home.component.html  home.component.ts
UI/mulLLMChatapp/src/app/login/: login.component.css  login.component.html  login.component.ts
backend/: .dockerignore  README.md  agent.py
backend/tests/: test_llm_client.py
test-files/: multiagent.py
tests/: test_llm_client.py
