[project]
name = "multi-llm-chatbot-backend"
version = "0.1.0"
description = "simple fast api to create a backend that supports multi llm support"
authors = [
    {name = "Aravind Ramachandran"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
