[project]
name = "multi-llm-chatbot-backend"
version = "0.1.0"
description = "simple fast api to create a backend that supports multi llm support"
authors = [
    {name = "Aravind Ramachandran"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "openai (>=1.82.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.3"

